# switch-ruby

./: .gitignore  CMakeLists.txt  LIMITATIONS.md  README.md  addr2line.c  builtin.c  configure_switch.sh  cont.c  dir.c  file.c  gdb.py  io.c  io_buffer.c  process.c  random.c  ruby.c  shape.c  switch_cross_compiling_setup.rb  thread_pthread.c  thread_pthread_mn.c  vm.c
.github/actions/setup/directories/: action.yml
.github/actions/slack/: action.yml
.github/workflows/: annocheck.yml  baseruby.yml  bundled_gems.yml  check_dependencies.yml  check_misc.yml  codeql-analysis.yml  compilers.yml  cygwin.yml  default_gems.yml  dependabot_automerge.yml  macos.yml  mingw.yml  modgc.yml  parsey.yml  post_push.yml  pr-playground.yml  release.yml  rjit-bindgen.yml  rjit.yml  scorecards.yml  spec_guards.yml  ubuntu.yml  wasm.yml  windows.yml  yjit-macos.yml  yjit-ubuntu.yml
basictest/: test.rb
basictest-switch/: Makefile  basictest_runner_switch.c
basictest-switch/romfs/: basictest  setup.rb
bootstraptest/: test_block.rb  test_literal.rb  test_ractor.rb  test_syntax.rb
bootstraptest-switch/: Makefile  bootstraptest_runner_switch.c
bootstraptest-switch/romfs/: bootstraptest
cmake/: RubyConfig.cmake.in  RubySwitchHelpers.cmake  ruby.pc.in
coroutine/arm64/: Context.h
examples/cmake_fetch_content/: CMakeLists.txt  README.md
examples/cmake_find_package/: CMakeLists.txt  README.md
examples/common/: DevkitA64Libnx.cmake  FindLibnx.cmake  SwitchTools.cmake  main.cpp
examples/common/romfs/ruby/app/: main.rb
examples/make/: Makefile  README.md
ext/json/parser/: extconf.rb
ext/pathname/: pathname.c
ext/socket/: extconf.rb  option.c  raddrinfo.c  rubysocket.h  sockport.h
ext/strscan/: strscan.c
gc/default/: default.c
lib/: tmpdir.rb
test-switch/: Makefile  bootstraptest_runner_switch.c  btest_shim.rb  test_runner_switch.c
test-switch/romfs/: bootstraptest  btest_shim.rb  test_ruby_runner_shim.rb
test-switch/romfs/ext/date/: lib
test-switch/romfs/lib/: date.rb  delegate.rb  digest  digest.rb  fileutils.rb  find.rb  forwardable  forwardable.rb  ipaddr.rb  json  json.rb  monitor.rb  objspace  objspace.rb  optparse  optparse.rb  ostruct.rb  pathname.rb  pp.rb  prettyprint.rb  ripper  ripper.rb  securerandom.rb  set  set.rb  shellwords.rb  singleton.rb  socket.rb  strscan  tempfile.rb  time.rb  timeout.rb  tmpdir.rb  tsort.rb  unicode_normalize  weakref.rb
test-switch/romfs/test/: date  digest  etc  io  json  lib  monitor  objspace  pathname  ripper  ruby  socket  stringio  strscan  test_bundled_gems.rb  test_delegate.rb  test_extlibs.rb  test_find.rb  test_forwardable.rb  test_ipaddr.rb  test_open3.rb  test_pp.rb  test_prettyprint.rb  test_pstore.rb  test_pty.rb  test_rbconfig.rb  test_securerandom.rb  test_shellwords.rb  test_singleton.rb  test_tempfile.rb  test_time.rb  test_timeout.rb  test_tmpdir.rb  test_trick.rb  test_tsort.rb  test_unicode_normalize.rb  test_weakref.rb  zlib
test-switch/romfs/tool/lib/: colorize.rb  core_assertions.rb  envutil.rb  find_executable.rb  leakchecker.rb  test
test/io/wait/: test_io_wait.rb
test/pathname/: test_pathname.rb
test/ruby/: test_file.rb  test_hash.rb  test_object.rb  test_unicode_escape.rb
test/socket/: test_tcp.rb
yjit/: Cargo.toml
